Revert hero title change

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
   <div class="page">
     <header class="hero">
       <div class="hero__badge" data-i18n="hero_badge">Black Friday 2025 · Ofertas en Tecnología</div>
-      <h1 data-i18n="hero_title">Encuentra las mejores ofertas en tecnología 🔥</h1>
+      <h1 data-i18n="hero_title">Encuentra las mejores ofertas en tecnología</h1>
       <p data-i18n="hero_description">
         Descubre descuentos exclusivos en laptops, smartphones, audio y gaming.
         Ofertas actualizadas diariamente, personalizadas para tu región.
